--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 JWT_ACCESS_KEY=FILHADAPUTANENHUMVAIQUEBRARESSASENHA
 JWT_REFRESH_KEY=FILHADAPUTANENHUMVAIQUEBRARESSASENHAREFRESH
+
+MODE=PROD
+API_PORT=7200
+DB_HOST= localhost
+DB_PORT= 5432
+DB_USER= postgres
+DB_PASSWORD= 123456
+DB_NAME= loja-users
