--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ DB_PORT= 5432
 DB_USER= postgres
 DB_PASSWORD= 123456
 DB_NAME= loja-users
+SMTP_HOST= mail.averbachcobrancas.com.br
+SMTP_PORT= 587
+SMTP_USER= ecommerce@averbachcobrancas.com.br
+SMTP_PASS= p4ssw@rd4vb!
